# model-retraining-gitops-fastapi

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app_model.py  config.py  good.csv  pyproject.toml  requirements.txt  test_app.py  train.py
.github/workflows/: cicd.yml  retrain.yml
